--- a/index.html
+++ b/index.html
@@ -2,11 +2,96 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
-  </body>
+<header>
+  <nav>
+    <a>
+      <img src="img/index-logo.svg" width="" height="" alt="Логотип Седоны">
+    </a>
+    <ul>
+      <li><a href="info.html">Информация</a></li>
+      <li><a href="foto.html">Фото и видео</a></li>
+      <li><a href="map.html">Карта штата</a></li>
+      <li><a href="hotels.html">Гостиницы</a></li>
+    </ul>
+</nav>
+</header>
+<main>
+  <section>
+  <h1>Sedona</h1>
+  <p>Welcome to the gorgeus</p>
+  <p>"Becouse the grand Canyon susks"</p>
+  </section>
+  <article>
+  <h2>Седона - небольшой городок в Аризон, засживающий большего!</h2>
+  <p>Рассмотрим пять причин, по которым седона круче, чем Гранд Каньен!</p>
+<section>
+<h2>Причины</h2>
+<ol>
+    <li>
+      <h3>Настоящий городок</h3>
+    <p>№1</p>
+    <p>Седона не аттракцион для туристов, там течет настоящая жизнь</p>
+<img src="img/flag.jpg" width="" height="" alt="Фото Седоны"></a>
+  </li>
+<ul>
+  <li>
+    <h3>Жилье</h3>
+  <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+</li>
+<li>
+  <h3>Еда</h3>
+  <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+</li>
+<li>
+<h3>Сувениры</h3>
+<p>Не только китайского, но и местного производства</p>
+</li>
+</ul>
+<li>
+  <h3>Там есть мост дьявола</h3>
+  <p>№2</p>
+<p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+<img src="img/bridge.jpg" width="" height="" alt="Фото Моста Дьявола"></a>
+</li>
+<li>
+  <h3>Небольшая площадь</h3>
+    <p>№3</p>
+    </li>
+    <li>
+      <h3>Красивая дорога</h3>
+  <p>№4<p>
+    <p>Ехать в Седону ихз Лас-Вегаса совсем не скучно!</p>
+  </li>
+  <li>
+    <h3>Мало туристов</h3>
+    <p>№5<p>
+      <p>Большинство едет в Гранд Коньон и толпится там</p>
+    </li>
+    </ol>
+  </section>
+</article>
+<section>
+<h2>Заинтересовались?</h2>
+</p>Укажите предполагаемые даты поездки, и мы покажем лучшие предложения гостиниц в Седоне</p>
+<!-- Здесь будет форма -->
+</section>
+</main>
+<footer>
+  <p>#Visitsedona</p>
+  <div>
+<ul>
+  <li><a href="#">Твитер</a></li>
+    <li><a href="#">Фейсбук</a></li>
+    <li><a href="#">Ютуб</a></li>
+  </ul>
+</div>
+<p>
+       Bebsait by
+       <a href="https://htmlacademy.ru">HTML Academy</a>
+     </p>
+</footer>
+</body>
 </html>
