--- a/index.html
+++ b/index.html
@@ -20,62 +20,100 @@
 </header>
 <main>
   <section>
+  <img src="img/sedona.jpg" width="" height="" alt="Горы Седоны">
   <h1>Sedona</h1>
   <p>Welcome to the gorgeus</p>
-  <p>"Becouse the grand Canyon susks"</p>
+  <p>"Becouse the grand<br>Canyon susks"</p>
   </section>
   <article>
-  <h2>Седона - небольшой городок в Аризон, засживающий большего!</h2>
+  <h2>Седона - небольшой городок в Аризон,<br>засживающий большего!</h2>
   <p>Рассмотрим пять причин, по которым седона круче, чем Гранд Каньен!</p>
 <section>
 <h2>Причины</h2>
 <ol>
     <li>
-      <h3>Настоящий городок</h3>
+  <h3>
+<a href="#">
+    Настоящий городок
+    </a>
+    </h3>
     <p>№1</p>
-    <p>Седона не аттракцион для туристов, там течет настоящая жизнь</p>
-<img src="img/flag.jpg" width="" height="" alt="Фото Седоны"></a>
+    <p>Седона не аттракцион для туристов,<br>там течет настоящая жизнь</p>
+<img src="img/flag.jpg" width="" height="" alt="Фото Седоны">
   </li>
 <ul>
   <li>
-    <h3>Жилье</h3>
-  <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+    <h3>
+    <a href="#">
+    Жилье
+</a>
+  </h3>
+  <img src="img/.hotels.jpg" width="" height="" alt="Жилье">
+  <p>Рекомендуем пожить в настоящем<br>мотеле, все как в кино!</p>
 </li>
 <li>
-  <h3>Еда</h3>
-  <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+<h3>
+  <a href="#">
+  Еда
+</a>
+</h3>
+<img src="img/.food.jpg" width="" height="" alt="Еда">
+  <p>Всегда заказывайте фирменный бургер,<br>вы не разочаруетесь!</p>
 </li>
 <li>
-<h3>Сувениры</h3>
-<p>Не только китайского, но и местного производства</p>
+  <h3>
+  <a href="#">
+Сувениры
+</a>
+</h3>
+<img src="img/.souvenirs.jpg" width="" height="" alt="Сувениры">
+<p>Не только китайского, но и местного<br>производства</p>
 </li>
 </ul>
 <li>
-  <h3>Там есть мост дьявола</h3>
+  <h3>
+<a href="#">
+  Там есть мост дьявола
+</a>
+</h3>
   <p>№2</p>
-<p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-<img src="img/bridge.jpg" width="" height="" alt="Фото Моста Дьявола"></a>
+<p>Да, по нему можно пройти! Если конечно<br>вы осмелитесь</p>
+<img src="img/bridge.jpg" width="" height="" alt="Фото Моста Дьявола">
 </li>
 <li>
-  <h3>Небольшая площадь</h3>
+  <h3>
+<a href="#">
+  Небольшая площадь
+</a>
+</h3>
     <p>№3</p>
+    <p>Все достопримечательности<br>находятся очень близко</p>
     </li>
     <li>
-      <h3>Красивая дорога</h3>
+      <h3>
+    <a href="#">
+      Красивая дорога
+</a>
+    </h3>
   <p>№4<p>
-    <p>Ехать в Седону ихз Лас-Вегаса совсем не скучно!</p>
+    <p>Ехать в Седону ихз Лас-Вегаса совсем<br>не скучно!</p>
   </li>
   <li>
-    <h3>Мало туристов</h3>
+    <h3>
+  <a href="#">
+    Мало туристов
+  </a>
+  </h3>
     <p>№5<p>
-      <p>Большинство едет в Гранд Коньон и толпится там</p>
+      <p>Большинство едет в Гранд Коньон<br>и толпится там</p>
     </li>
     </ol>
   </section>
 </article>
 <section>
 <h2>Заинтересовались?</h2>
-</p>Укажите предполагаемые даты поездки, и мы покажем лучшие предложения гостиниц в Седоне</p>
+</p>Укажите предполагаемые даты поездки,<br>и мы покажем лучшие предложения гостиниц в Седоне</p>
+<img src="img/map.jpg" width="" height="" alt="Карта">
 <!-- Здесь будет форма -->
 </section>
 </main>
