--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
   <body>
 <header>
   <nav>
-    <a>
-      <img src="img/index-logo.svg" width="" height="" alt="Логотип Седоны">
-    </a>
     <ul>
       <li><a href="info.html">Информация</a></li>
       <li><a href="foto.html">Фото и видео</a></li>
@@ -17,6 +14,14 @@
       <li><a href="hotels.html">Гостиницы</a></li>
     </ul>
 </nav>
+<section>
+<h2>
+  Логотип
+  </h2>
+  <a>
+    <img src="img/index-logo.svg" width="" height="" alt="Логотип Седоны">
+  </a>
+</section>
 </header>
 <main>
   <section>
@@ -25,91 +30,7 @@
   <p>Welcome to the gorgeus</p>
   <p>"Becouse the grand<br>Canyon susks"</p>
   </section>
-  <article>
-  <h2>Седона - небольшой городок в Аризон,<br>засживающий большего!</h2>
-  <p>Рассмотрим пять причин, по которым седона круче, чем Гранд Каньен!</p>
-<section>
-<h2>Причины</h2>
-<ol>
-    <li>
-  <h3>
-<a href="#">
-    Настоящий городок
-    </a>
-    </h3>
-    <p>№1</p>
-    <p>Седона не аттракцион для туристов,<br>там течет настоящая жизнь</p>
-<img src="img/flag.jpg" width="" height="" alt="Фото Седоны">
-  </li>
-<ul>
-  <li>
-    <h3>
-    <a href="#">
-    Жилье
-</a>
-  </h3>
-  <img src="img/.hotels.jpg" width="" height="" alt="Жилье">
-  <p>Рекомендуем пожить в настоящем<br>мотеле, все как в кино!</p>
-</li>
-<li>
-<h3>
-  <a href="#">
-  Еда
-</a>
-</h3>
-<img src="img/.food.jpg" width="" height="" alt="Еда">
-  <p>Всегда заказывайте фирменный бургер,<br>вы не разочаруетесь!</p>
-</li>
-<li>
-  <h3>
-  <a href="#">
-Сувениры
-</a>
-</h3>
-<img src="img/.souvenirs.jpg" width="" height="" alt="Сувениры">
-<p>Не только китайского, но и местного<br>производства</p>
-</li>
-</ul>
-<li>
-  <h3>
-<a href="#">
-  Там есть мост дьявола
-</a>
-</h3>
-  <p>№2</p>
-<p>Да, по нему можно пройти! Если конечно<br>вы осмелитесь</p>
-<img src="img/bridge.jpg" width="" height="" alt="Фото Моста Дьявола">
-</li>
-<li>
-  <h3>
-<a href="#">
-  Небольшая площадь
-</a>
-</h3>
-    <p>№3</p>
-    <p>Все достопримечательности<br>находятся очень близко</p>
-    </li>
-    <li>
-      <h3>
-    <a href="#">
-      Красивая дорога
-</a>
-    </h3>
-  <p>№4<p>
-    <p>Ехать в Седону ихз Лас-Вегаса совсем<br>не скучно!</p>
-  </li>
-  <li>
-    <h3>
-  <a href="#">
-    Мало туристов
-  </a>
-  </h3>
-    <p>№5<p>
-      <p>Большинство едет в Гранд Коньон<br>и толпится там</p>
-    </li>
-    </ol>
-  </section>
-</article>
+<!-- Пропущен большой блок-->
 <section>
 <h2>Заинтересовались?</h2>
 </p>Укажите предполагаемые даты поездки,<br>и мы покажем лучшие предложения гостиниц в Седоне</p>
@@ -128,7 +49,7 @@
 </div>
 <p>
        Bebsait by
-       <a href="https://htmlacademy.ru">HTML Academy</a>
+       <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
      </p>
 </footer>
 </body>
