--- a/catalog.html
+++ b/catalog.html
@@ -7,6 +7,9 @@
   <body>
     <header>
       <nav>
+        <a href="index.html">
+          <img src="img/index-logo.svg" width="" height="" alt="Логотип Седоны">
+        </a>
         <ul>
           <li><a href="info.html">Информация</a></li>
           <li><a href="foto.html">Фото и видео</a></li>
@@ -14,96 +17,79 @@
           <li><a href="hotels.html">Гостиницы</a></li>
         </ul>
       </nav>
-      <section>
-        <h2>Логотип</h2>
-          <a href="<a href="index.html">
-            <img src="img/index-logo.svg" width="" height="" alt="Логотип Седоны">
+    </section>
+  </header>
+  <main>
+   <section>
+    <!-- Здесь будет форма -->
+   </section>
+   <section>
+    <h2>Список отелей</h2>
+      <ul>
+        <li>
+          <a href="Amara Resort & spa.html">
+           <img src="Amara Resort & spa.jpg"width="100" height="100" alt="Вид на гостиницу Amara Resort & spa">
           </a>
-        </section>
-      </header>
-      <main>
-        <section>
-          <!-- Здесь будет форма -->
-        </section>
-        <section>
-          <h2>Список отелей</h2>
-          <ul>
-            <li>
-              <h3>
-                <a href="#">
-                Amara Resort & spa
-              </a>
-            </h3>
-            <a href="Amara Resort & spa.html">
-              <img src="Amara Resort & spa.jpg"width="100" height="100" alt="Вид на гостиницу Amara Resort & spa">
-            </a>
-            <p>Гостиница</p>
-            <p>От 4000 р.</p>
-            <p>
-              <a href="#">Подробнее</a>
-            </p>
-            <p>
-              <a href="#">Забронировать</a>
-            </p>
-            <p>Рейтинг</p>
-              <img src="Stars Amara Resort & spa.jpg">
-            </li>
-            <li>
-              <h3>
-                <a href="#">
-                Desert Quail Inn
-              </a>
-            </h3>
-            <a href="Desert Quail Inn.html">
-              <img src="Desert Quail Inn.jpg"width="100" height="100" alt="Вид на мотель Desert Quail Inn">
-            </a>
-            <p>Мотель</p>
-            <p>От 3000 р.</p>
-            <p>
-              <a href="#">Подробнее</a>
-            </p>
-            <p>
-              <a href="#">Забронировать</a>
-            </p>
-            <p>Рейтинг</p>
-              <img src="Stars Desert Quail Inn.jpg">
-            </li>
-            <li>
-              <h3>
-                <a href="#">
-                  Villas at Poco Diablo
-                </a>
-              </h3>
-              <a href="Villas at Poco Diablo.html">
-                <img src="Villas at Poco Diablo.jpg"width="100" height="100" alt="Вид на апартаменты Villas at Poco Diablo">
-              </a>
-              <p>Апартаменты</p>
-              <p>От 2000 р.</p>
-              <p>
-                <a href="#">Подробнее</a>
-              </p>
-              <p>
-                <a href="#">Забронировать</a>
-              </p>
-              <p>Рейтинг</p>
-                <img src="Villas at Poco Diablo.jpg">
-              </li>
-            </ul>
-          </section>
-        </main>
-        <footer>
-         <p>#Visitsedona</p>
-            <div>
-             <ul>
-              <li><a href="#">Твитер</a></li>
-              <li><a href="#">Фейсбук</a></li>
-              <li><a href="#">Ютуб</a></li>
-            </ul>
-          </div>
-          <p>
-          Bebsait by
-          <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
-          </p>
-        </footer>
-      </body>
-  </html>
+          <h3>
+           <a href="#">
+            Amara Resort & spa
+           </a>
+         </h3>
+         <p>Гостиница</p>
+         <p>От 4000 р.</p>
+         <a href="#">Подробнее</a>
+         <a href="#">Забронировать</a>
+         <img src="5 Stars Amara Resort & spa.jpg">
+         <div>Рейтинг<div>
+        </li>
+        <li>
+         <a href="Desert Quail Inn.html">
+          <img src="Desert Quail Inn.jpg"width="100" height="100" alt="Вид на мотель Desert Quail Inn">
+         </a>
+         <h3>
+          <a href="#">
+           Desert Quail Inn
+          </a>
+        </h3>
+        <p>Мотель</p>
+        <p>От 3000 р.</p>
+        <a href="#">Подробнее</a>
+        <a href="#">Забронировать</a>
+        <img src="3 Stars Desert Quail Inn.jpg">
+        <div>Рейтинг</div>
+      </li>
+      <li>
+       <a href="Villas at Poco Diablo.html">
+        <img src="Villas at Poco Diablo.jpg"width="100" height="100" alt="Вид на апартаменты Villas at Poco Diablo">
+       </a>
+       <h3>
+        <a href="#">
+        Villas at Poco Diablo
+        </a>
+      </h3>
+      <p>Апартаменты</p>
+      <p>От 2000 р.</p>
+       <a href="#">Подробнее</a>
+       <a href="#">Забронировать</a>
+       <img src="2 Stars Villas at Poco Diablo.jpg">
+       <div>Рейтинг</div>
+     </li>
+    </ul>
+  </section>
+</main>
+<footer>
+  <p>#Visitsedona</p>
+    <div>
+      <ul>
+        <li><a href="#">Твитер</a></li>
+        <li><a href="#">Фейсбук</a></li>
+        <li><a href="#">Ютуб</a></li>
+      </ul>
+    </div>
+    <p>
+     Bebsait by
+      <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+    </p>
+   </footer>
+ </body>
+</html>
