--- a/index.html
+++ b/index.html
@@ -15,40 +15,39 @@
         </ul>
       </nav>
       <section>
-      <h2>Логотип</h2>
-        <a>
-          <img src="img/index-logo.svg" width="" height="" alt="Логотип Седоны">
-        </a>
-      </section>
+        <h2>Логотип</h2>
+          <a href="<a href="index.html">
+            <img src="img/index-logo.svg" width="" height="" alt="Логотип Седоны">
+          </a>
+        </section>
     </header>
     <main>
       <section>
        <img src="img/sedona.jpg" width="" height="" alt="Горы Седоны">
-        <h1>Sedona</h1>
-        <p>Welcome to the gorgeus</p>
-        <p>"Becouse the grand<br>Canyon susks"</p>
       </section>
       <!-- Пропущен большой блок-->
       <section>
-      <h2>Заинтересовались?</h2>
-      <p>Укажите предполагаемые даты поездки,<br>и мы покажем лучшие предложения гостиниц в Седоне</p>
+        <h2>Заинтересовались?</h2>
+          <p>Укажите предполагаемые даты поездки,<br>и мы покажем лучшие предложения гостиниц в Седоне</p>
+      </section>
+      <section>
         <img src="img/map.jpg" width="" height="" alt="Карта">
-      <!-- Здесь будет форма -->
-    </section>
-  </main>
-  <footer>
-  <p>#Visitsedona</p>
-   <div>
-     <ul>
-       <li><a href="#">Твитер</a></li>
-       <li><a href="#">Фейсбук</a></li>
-       <li><a href="#">Ютуб</a></li>
-     </ul>
-   </div>
-   <p>
-    Bebsait by
-     <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
-   </p>
-  </footer>
- </body>
-</html>
+          <!-- Здесь будет форма -->
+      </section>
+    </main>
+    <footer>
+      <p>#Visitsedona</p>
+        <div>
+          <ul>
+            <li><a href="#">Твитер</a></li>
+            <li><a href="#">Фейсбук</a></li>
+            <li><a href="#">Ютуб</a></li>
+          </ul>
+        </div>
+        <p>
+        Bebsait by
+          <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+        </p>
+      </footer>
+    </body>
+  </html>
