Правки. Постаралась учесть все коментарии

--- a/index.html
+++ b/index.html
@@ -2,29 +2,25 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Седона</title>
+    <title>HTML Academy:Седона</title>
   </head>
   <body>
     <header>
       <nav>
         <ul>
           <li><a href="info.html">Информация</a></li>
-          <li><a href="foto.html">Фото и видео</a></li>
+          <li><a href="photo.html">Фото и видео</a></li>
           <li><a href="map.html">Карта штата</a></li>
           <li><a href="hotels.html">Гостиницы</a></li>
         </ul>
       </nav>
       <section>
         <h2>Логотип</h2>
-          <a href="<a href="index.html">
-            <img src="img/index-logo.svg" width="" height="" alt="Логотип Седоны">
-          </a>
-        </section>
+        <img src="img/index-logo.svg" width="" height="" alt="Логотип Седоны">
+      </section>
     </header>
     <main>
       <section>
-       <img src="img/sedona.jpg" width="" height="" alt="Горы Седоны">
-      </section>
       <!-- Пропущен большой блок-->
       <section>
         <h2>Заинтересовались?</h2>
@@ -37,6 +33,7 @@
     </main>
     <footer>
       <p>#Visitsedona</p>
+      <p>Тел:+7(495)666-02-66</p>
         <div>
           <ul>
             <li><a href="#">Твитер</a></li>
@@ -45,8 +42,11 @@
           </ul>
         </div>
         <p>
-        Bebsait by
-          <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+        Websait by
+          <a href="https://htmlacademy.ru/intensive/htmlcss">
+            <img src="logo HTML Academy.svg" width="" height="" alt="Логотип HTML Academy">
+            HTML<br> Academy
+          </a>
         </p>
       </footer>
     </body>
