--- a/catalog.html
+++ b/catalog.html
@@ -8,13 +8,13 @@
     <header>
       <nav>
         <a href="index.html">
-          <img src="img/index-logo.svg" width="" height="" alt="Логотип Седоны">
+          <img src="img/index-logo.svg" width="123" height="100" alt="Логотип Седоны">
         </a>
         <ul>
           <li><a href="info.html">Информация</a></li>
-          <li><a href="foto.html">Фото и видео</a></li>
+          <li><a href="photo.html">Фото и видео</a></li>
           <li><a href="map.html">Карта штата</a></li>
-          <li><a href="hotels.html">Гостиницы</a></li>
+          <li>Гостиницы</li>
         </ul>
       </nav>
     </section>
@@ -28,53 +28,47 @@
       <ul>
         <li>
           <a href="Amara Resort & spa.html">
-           <img src="Amara Resort & spa.jpg"width="100" height="100" alt="Вид на гостиницу Amara Resort & spa">
+            <img src="Amara Resort & spa.jpg"width="100" height="100" alt="Вид на гостиницу Amara Resort & spa">
           </a>
           <h3>
-           <a href="#">
-            Amara Resort & spa
-           </a>
-         </h3>
-         <p>Гостиница</p>
-         <p>От 4000 р.</p>
-         <a href="#">Подробнее</a>
-         <a href="#">Забронировать</a>
-         <img src="5 Stars Amara Resort & spa.jpg">
-         <div>Рейтинг<div>
-        </li>
-        <li>
+            <a href="#">Amara Resort & spa</a>
+          </h3>
+          <p>Гостиница</p>
+          <p>От 4000 р.</p>
+          <a href="#">Подробнее</a>
+          <a href="#">Забронировать</a>
+          <img src="5 Stars Amara Resort & spa.jpg">
+          <div>Рейтинг<div><br>
+       </li>
+       <li>
          <a href="Desert Quail Inn.html">
           <img src="Desert Quail Inn.jpg"width="100" height="100" alt="Вид на мотель Desert Quail Inn">
-         </a>
-         <h3>
-          <a href="#">
-           Desert Quail Inn
-          </a>
+        </a>
+        <h3>
+          <a href="#">Desert Quail Inn</a>
         </h3>
         <p>Мотель</p>
         <p>От 3000 р.</p>
         <a href="#">Подробнее</a>
         <a href="#">Забронировать</a>
         <img src="3 Stars Desert Quail Inn.jpg">
-        <div>Рейтинг</div>
+        <div>Рейтинг</div><br>
       </li>
       <li>
-       <a href="Villas at Poco Diablo.html">
+        <a href="Villas at Poco Diablo.html">
         <img src="Villas at Poco Diablo.jpg"width="100" height="100" alt="Вид на апартаменты Villas at Poco Diablo">
        </a>
        <h3>
-        <a href="#">
-        Villas at Poco Diablo
-        </a>
-      </h3>
-      <p>Апартаменты</p>
-      <p>От 2000 р.</p>
+         <a href="#">Villas at Poco Diablo</a>
+       </h3>
+       <p>Апартаменты</p>
+       <p>От 2000 р.</p>
        <a href="#">Подробнее</a>
        <a href="#">Забронировать</a>
        <img src="2 Stars Villas at Poco Diablo.jpg">
-       <div>Рейтинг</div>
+       <div>Рейтинг</div><br>
      </li>
-    </ul>
+   </ul>
   </section>
 </main>
 <footer>
@@ -87,9 +81,12 @@
       </ul>
     </div>
     <p>
-     Bebsait by
-      <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
-    </p>
-   </footer>
- </body>
+      Websait by
+        <a href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="logo HTML Academy.svg" width="" height="" alt="Логотип HTML Academy">
+          HTML<br> Academy
+        </a>
+      </p>
+    </footer>
+  </body>
 </html>
