--- a/index.html
+++ b/index.html
@@ -1,39 +1,41 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy:Седона</title>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="info.html">Информация</a></li>
-          <li><a href="photo.html">Фото и видео</a></li>
-          <li><a href="map.html">Карта штата</a></li>
-          <li><a href="hotels.html">Гостиницы</a></li>
-        </ul>
-      </nav>
-      <section>
-        <h2>Логотип</h2>
-        <img src="img/index-logo.svg" width="" height="" alt="Логотип Седоны">
-      </section>
-    </header>
-    <main>
-      <section>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy:Седона</title>
+</head>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="info.html">Информация</a></li>
+        <li><a href="photo.html">Фото и видео</a></li>
+        <li><a href="map.html">Карта штата</a></li>
+        <li><a href="catalog.html">Гостиницы</a></li>
+      </ul>
+    </nav>
+    <section>
+      <h2>Логотип</h2>
+      <img src="img/index-logo.svg" width="" height="" alt="Логотип Седоны">
+    </section>
+  </header>
+  <main>
+    <section>
       <!-- Пропущен большой блок-->
       <section>
         <h2>Заинтересовались?</h2>
-          <p>Укажите предполагаемые даты поездки,<br>и мы покажем лучшие предложения гостиниц в Седоне</p>
+        <p>Укажите предполагаемые даты поездки,<br>и мы покажем лучшие предложения гостиниц в Седоне</p>
       </section>
       <section>
         <img src="img/map.jpg" width="" height="" alt="Карта">
-          <!-- Здесь будет форма -->
+        <!-- Здесь будет форма -->
       </section>
     </main>
     <footer>
       <p>#Visitsedona</p>
-      <p>Тел:+7(495)666-02-66</p>
+      <p>Тел:
+        <a href="tel:+7(495)666-02-66">
+        </p>
         <div>
           <ul>
             <li><a href="#">Твитер</a></li>
@@ -42,12 +44,12 @@
           </ul>
         </div>
         <p>
-        Websait by
+          Websait by
           <a href="https://htmlacademy.ru/intensive/htmlcss">
-            <img src="logo HTML Academy.svg" width="" height="" alt="Логотип HTML Academy">
-            HTML<br> Academy
+            <img src="logo.svg" width="" height="" alt="Логотип HTML Academy">
+            HTML Academy
           </a>
         </p>
       </footer>
     </body>
-  </html>
+    </html>
