--- a/catalog.html
+++ b/catalog.html
@@ -1,92 +1,95 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Седона</title>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <a href="index.html">
-          <img src="img/index-logo.svg" width="123" height="100" alt="Логотип Седоны">
-        </a>
-        <ul>
-          <li><a href="info.html">Информация</a></li>
-          <li><a href="photo.html">Фото и видео</a></li>
-          <li><a href="map.html">Карта штата</a></li>
-          <li>Гостиницы</li>
-        </ul>
-      </nav>
-    </section>
-  </header>
-  <main>
-   <section>
-    <!-- Здесь будет форма -->
-   </section>
-   <section>
-    <h2>Список отелей</h2>
+<head>
+  <meta charset="utf-8">
+  <title>Седона</title>
+</head>
+<body>
+  <header>
+    <nav>
+      <a href="index.html">
+        <img src="img/index-logo.svg" width="1200" height="780" alt="Логотип Седоны">
+      </a>
       <ul>
-        <li>
-          <a href="Amara Resort & spa.html">
-            <img src="Amara Resort & spa.jpg"width="100" height="100" alt="Вид на гостиницу Amara Resort & spa">
-          </a>
-          <h3>
-            <a href="#">Amara Resort & spa</a>
-          </h3>
-          <p>Гостиница</p>
-          <p>От 4000 р.</p>
-          <a href="#">Подробнее</a>
-          <a href="#">Забронировать</a>
-          <img src="5 Stars Amara Resort & spa.jpg">
-          <div>Рейтинг<div><br>
-       </li>
-       <li>
-         <a href="Desert Quail Inn.html">
-          <img src="Desert Quail Inn.jpg"width="100" height="100" alt="Вид на мотель Desert Quail Inn">
+        <li><a href="info.html">Информация</a></li>
+        <li><a href="photo.html">Фото и видео</a></li>
+        <li><a href="map.html">Карта штата</a></li>
+        <li>Гостиницы</li>
+      </ul>
+    </nav>
+  </section>
+</header>
+<main>
+  <section>
+    <!-- Здесь будет форма -->
+  </section>
+  <section>
+    <h2>Список отелей</h2>
+    <ul>
+      <li>
+        <a href="#">
+          <img src="img/Amara.jpg" width="135" height="90" alt="Вид на гостиницу Amara Resort & spa">
         </a>
         <h3>
-          <a href="#">Desert Quail Inn</a>
+          <a href="#">Amara Resort & spa</a>
         </h3>
-        <p>Мотель</p>
-        <p>От 3000 р.</p>
+        <p>Гостиница</p>
+        <p>От 4000 р.</p>
         <a href="#">Подробнее</a>
         <a href="#">Забронировать</a>
-        <img src="3 Stars Desert Quail Inn.jpg">
-        <div>Рейтинг</div><br>
-      </li>
-      <li>
-        <a href="Villas at Poco Diablo.html">
-        <img src="Villas at Poco Diablo.jpg"width="100" height="100" alt="Вид на апартаменты Villas at Poco Diablo">
-       </a>
-       <h3>
-         <a href="#">Villas at Poco Diablo</a>
-       </h3>
-       <p>Апартаменты</p>
-       <p>От 2000 р.</p>
-       <a href="#">Подробнее</a>
-       <a href="#">Забронировать</a>
-       <img src="2 Stars Villas at Poco Diablo.jpg">
-       <div>Рейтинг</div><br>
-     </li>
-   </ul>
-  </section>
-</main>
-<footer>
-  <p>#Visitsedona</p>
-    <div>
-      <ul>
-        <li><a href="#">Твитер</a></li>
-        <li><a href="#">Фейсбук</a></li>
-        <li><a href="#">Ютуб</a></li>
+        <img src="#">
+        <span>Рейтинг:8,5<span>
+        </li>
+        <li>
+          <a href="#">
+            <img src="img/Desert.jpg" width="135" height="90" alt="Вид на мотель Desert Quail Inn">
+          </a>
+          <h3>
+            <a href="#">Desert Quail Inn</a>
+          </h3>
+          <p>Мотель</p>
+          <p>От 3000 р.</p>
+          <a href="#">Подробнее</a>
+          <a href="#">Забронировать</a>
+          <img src="StarsDesert.jpg">
+          <span>Рейтинг:8,9</span>
+        </li>
+        <li>
+          <a href="#">
+            <img src="img/Villas.jpg" width="135" height="90" alt="Вид на апартаменты Villas at Poco Diablo">
+          </a>
+          <h3>
+            <a href="#">Villas at Poco Diablo</a>
+          </h3>
+          <p>Апартаменты</p>
+          <p>От 2000 р.</p>
+          <a href="#">Подробнее</a>
+          <a href="#">Забронировать</a>
+          <img src="StarsVillas.jpg">
+          <span>Рейтинг:9,2</span>
+        </li>
       </ul>
-    </div>
-    <p>
-      Websait by
+    </section>
+  </main>
+  <footer>
+    <p>#Visitsedona</p>
+    <p>Тел:
+      <a href="tel:+7(495)666-02-66">
+      </p>
+      <div>
+        <ul>
+          <li><a href="#">Твитер</a></li>
+          <li><a href="#">Фейсбук</a></li>
+          <li><a href="#">Ютуб</a></li>
+        </ul>
+      </div>
+      <p>
+        Websait by
         <a href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="logo HTML Academy.svg" width="" height="" alt="Логотип HTML Academy">
-          HTML<br> Academy
+          <img src="logo2.svg" width="" height="" alt="Логотип HTML Academy">
+          HTML Academy
         </a>
       </p>
     </footer>
   </body>
-</html>
+  </html>
