--- a/catalog.html
+++ b/catalog.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <header>
+    <div></div>
     <nav>
       <a href="index.html">
         <img src="img/index-logo.svg" width="1200" height="780" alt="Логотип Седоны">
@@ -14,31 +15,30 @@
         <li><a href="info.html">Информация</a></li>
         <li><a href="photo.html">Фото и видео</a></li>
         <li><a href="map.html">Карта штата</a></li>
-        <li>Гостиницы</li>
+        <li><a>Гостиницы</a></li>
       </ul>
     </nav>
-  </section>
-</header>
-<main>
-  <section>
-    <!-- Здесь будет форма -->
-  </section>
-  <section>
-    <h2>Список отелей</h2>
-    <ul>
-      <li>
-        <a href="#">
-          <img src="img/Amara.jpg" width="135" height="90" alt="Вид на гостиницу Amara Resort & spa">
-        </a>
-        <h3>
-          <a href="#">Amara Resort & spa</a>
-        </h3>
-        <p>Гостиница</p>
-        <p>От 4000 р.</p>
-        <a href="#">Подробнее</a>
-        <a href="#">Забронировать</a>
-        <img src="#">
-        <span>Рейтинг:8,5<span>
+  </header>
+  <main>
+    <section>
+      <!-- Здесь будет форма -->
+    </section>
+    <section>
+      <h2>Список отелей</h2>
+      <ul>
+        <li>
+          <a href="#">
+            <img src="img/Amara.jpg" width="135" height="90" alt="Вид на гостиницу Amara Resort & spa">
+          </a>
+          <h3>
+            <a href="#">Amara Resort & spa</a>
+          </h3>
+          <span>Гостиница</span>
+          <span>От 4000 р.</span>
+          <a href="#">Подробнее</a>
+          <a href="#">Забронировать</a>
+          <img src="#">
+          <span>Рейтинг:8,5<span>
         </li>
         <li>
           <a href="#">
@@ -47,8 +47,8 @@
           <h3>
             <a href="#">Desert Quail Inn</a>
           </h3>
-          <p>Мотель</p>
-          <p>От 3000 р.</p>
+          <span>Мотель</span>
+          <span>От 3000 р.</span>
           <a href="#">Подробнее</a>
           <a href="#">Забронировать</a>
           <img src="StarsDesert.jpg">
@@ -61,8 +61,8 @@
           <h3>
             <a href="#">Villas at Poco Diablo</a>
           </h3>
-          <p>Апартаменты</p>
-          <p>От 2000 р.</p>
+          <span>Апартаменты</span>
+          <span>От 2000 р.</span>
           <a href="#">Подробнее</a>
           <a href="#">Забронировать</a>
           <img src="StarsVillas.jpg">
@@ -75,21 +75,20 @@
     <p>#Visitsedona</p>
     <p>Тел:
       <a href="tel:+7(495)666-02-66">
-      </p>
-      <div>
-        <ul>
-          <li><a href="#">Твитер</a></li>
-          <li><a href="#">Фейсбук</a></li>
-          <li><a href="#">Ютуб</a></li>
-        </ul>
-      </div>
-      <p>
-        Websait by
-        <a href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="logo2.svg" width="" height="" alt="Логотип HTML Academy">
-          HTML Academy
-        </a>
-      </p>
-    </footer>
-  </body>
-  </html>
+    </p>
+    <div>
+      <ul>
+        <li><a href="#">Twitter</a></li>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">YouTube</a></li>
+      </ul>
+    </div>
+    <p>
+      Websait by
+      <a href="https://htmlacademy.ru/intensive/htmlcss">
+        <img src="logo2.svg" width="" height="" alt="Логотип HTML Academy">
+      </a>
+    </p>
+  </footer>
+</body>
+</html>
