--- a/index.html
+++ b/index.html
@@ -22,34 +22,34 @@
   <main>
     <section>
       <!-- Пропущен большой блок-->
-      <section>
-        <h2>Заинтересовались?</h2>
-        <p>Укажите предполагаемые даты поездки,<br>и мы покажем лучшие предложения гостиниц в Седоне</p>
-      </section>
-      <section>
-        <img src="img/map.jpg" width="" height="" alt="Карта">
-        <!-- Здесь будет форма -->
-      </section>
-    </main>
-    <footer>
-      <p>#Visitsedona</p>
-      <p>Тел:
-        <a href="tel:+7(495)666-02-66">
-        </p>
-        <div>
-          <ul>
-            <li><a href="#">Твитер</a></li>
-            <li><a href="#">Фейсбук</a></li>
-            <li><a href="#">Ютуб</a></li>
-          </ul>
-        </div>
-        <p>
-          Websait by
-          <a href="https://htmlacademy.ru/intensive/htmlcss">
-            <img src="logo.svg" width="" height="" alt="Логотип HTML Academy">
-            HTML Academy
-          </a>
-        </p>
-      </footer>
-    </body>
-    </html>
+    </section>
+    <section>
+      <h2>Заинтересовались?</h2>
+      <p>Укажите предполагаемые даты поездки,<br>и мы покажем лучшие предложения гостиниц в Седоне</p>
+    </section>
+    <section>
+      <img src="img/map.jpg" width="" height="" alt="Карта">
+      <!-- Здесь будет форма -->
+    </section>
+  </main>
+  <footer>
+    <p>#Visitsedona</p>
+    <p>Тел:
+      <a href="tel:+7(495)666-02-66">
+    </p>
+    <div>
+      <ul>
+        <li><a href="#">Twitter</a></li>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">YouTube</a></li>
+      </ul>
+    </div>
+    <p>
+      Websait by
+      <a href="https://htmlacademy.ru/intensive/htmlcss">
+        <img src="logo.svg" width="" height="" alt="Логотип HTML Academy">
+      </a>
+    </p>
+  </footer>
+</body>
+</html>
