--- a/index.html
+++ b/index.html
@@ -16,40 +16,107 @@
     </nav>
     <section>
       <h2>Логотип</h2>
-      <img src="img/index-logo.svg" width="" height="" alt="Логотип Седоны">
+      <img src="logo-sedona.svg" width="138" height="70" alt="Логотип Седоны">
     </section>
   </header>
   <main>
     <section>
       <!-- Пропущен большой блок-->
     </section>
-    <section>
-      <h2>Заинтересовались?</h2>
-      <p>Укажите предполагаемые даты поездки,<br>и мы покажем лучшие предложения гостиниц в Седоне</p>
-    </section>
-    <section>
-      <img src="img/map.jpg" width="" height="" alt="Карта">
-      <!-- Здесь будет форма -->
-    </section>
-  </main>
-  <footer>
-    <p>#Visitsedona</p>
-    <p>Тел:
-      <a href="tel:+7(495)666-02-66">
-    </p>
-    <div>
-      <ul>
-        <li><a href="#">Twitter</a></li>
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">YouTube</a></li>
-      </ul>
-    </div>
-    <p>
-      Websait by
-      <a href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="logo.svg" width="" height="" alt="Логотип HTML Academy">
-      </a>
-    </p>
-  </footer>
-</body>
-</html>
+    <article>
+      <h2>Седона - небольшой городок в Аризоне, <br>заслуживающий большего!</h2>
+      <p>Рассмотрим пять причин, по которым седона круче, чем Гранд Каньен!</p>
+      <section>
+        <h2>Причины</h2>
+          <ol>
+            <li>
+              <h3>
+                <a href="#">Настоящий городок</a>
+              </h3>
+              <p>№1</p>
+              <p>Седона не аттракцион для туристов, <br>там течет настоящая жизнь</p>
+              <img src="#.jpg" width="" height="" alt="Фото Седоны">
+            </li>
+            <ul>
+              <li>
+                <img src="icon-1.svg" width="" height="" alt="Жилье">
+                <h3>
+                  <a href="#">Жилье</a>
+                </h3>
+                <li>
+                  <img src=" icon-2.svg " width="" height="" alt="Еда">
+                  <h3>
+                    <a href="#">Еда</a>
+                  </h3>
+                  <p>Всегда заказывайте фирменный бургер,<br>вы не разочаруетесь!</p>
+                </li>
+                <li>
+                  <img src=" icon-3.svg " width="" height="" alt="Сувениры">
+                  <h3>
+                    <a href="#">Сувениры</a>
+                  </h3>
+                  <p>Не только китайского, но и местного<br>производства</p>
+                </li>
+              </ul>
+              <li>
+                <h3>
+                  <a href="#">Там есть мост дьявола</a>
+                </h3>
+                <p>№2</p>
+                <p>Да, по нему можно пройти! Если конечно<br>вы осмелитесь</p>
+                <img src="#.jpg" width="" height="" alt="Фото Моста Дьявола">
+              </li>
+              <li>
+                <h3>
+                  <a href="#">Небольшая площадь</a>
+                </h3>
+                <p>№3</p>
+                <p>Все достопримечательности<br>находятся очень близко</p>
+              </li>
+              <li>
+                <h3>
+                  <a href="#"> Красивая дорога</a>
+                </h3>
+                <p>№4<p>
+                <p>Ехать в Седону ихз Лас-Вегаса совсем<br>не скучно!</p>
+              </li>
+              <li>
+                <h3>
+                  <a href="#">Мало туристов</a>
+                </h3>
+                <p>№5<p>
+                <p>Большинство едет в Гранд Коньон<br>и толпится там</p>
+              </li>
+            </ol>
+          </section>
+        </article>
+        <section>
+          <h2>Заинтересовались?</h2>
+          <p>Укажите предполагаемые даты поездки,<br>и мы покажем лучшие предложения гостиниц в Седоне</p>
+        </section>
+        <section>
+          <img src="map.png" width="1200" height="593" alt="Карта">
+          <!-- Здесь будет форма -->
+        </section>
+      </main>
+      <footer>
+        <p>#Visitsedona</p>
+        <p>Тел:
+          <a href="tel:+7(495)666-02-66">
+          </p>
+          <div>
+            <ul>
+              <li><a href="#">twitter</a></li>
+              <li><a href="#">fb-icon</a></li>
+              <li><a href="#">youTube</a></li>
+            </ul>
+          </div>
+          <p>
+            Websait by
+            <a href="https://htmlacademy.ru/intensive/htmlcss">
+              <img src="logo-htmlacademy.svg" width="" height="" alt="Логотип HTML Academy">
+            </a>
+          </p>
+        </footer>
+      </body>
+      </html>
