--- a/catalog.html
+++ b/catalog.html
@@ -28,7 +28,7 @@
       <ul>
         <li>
           <a href="#">
-            <img src="img/Amara.jpg" width="135" height="90" alt="Вид на гостиницу Amara Resort & spa">
+            <img src="img\amara.jpg" width="135" height="90" alt="Вид на гостиницу Amara Resort & spa">
           </a>
           <h3>
             <a href="#">Amara Resort & spa</a>
@@ -37,12 +37,12 @@
           <span>От 4000 р.</span>
           <a href="#">Подробнее</a>
           <a href="#">Забронировать</a>
-          <img src="#">
-          <span>Рейтинг:8,5<span>
+          <img src="img\star.svg">
+          <span>Рейтинг: 8,5<span>
         </li>
         <li>
           <a href="#">
-            <img src="img/Desert.jpg" width="135" height="90" alt="Вид на мотель Desert Quail Inn">
+            <img src="img\desert.jpg" width="135" height="90" alt="Вид на мотель Desert Quail Inn">
           </a>
           <h3>
             <a href="#">Desert Quail Inn</a>
@@ -51,12 +51,12 @@
           <span>От 3000 р.</span>
           <a href="#">Подробнее</a>
           <a href="#">Забронировать</a>
-          <img src="StarsDesert.jpg">
-          <span>Рейтинг:8,9</span>
+          <img src="img\star.svg">
+          <span>Рейтинг: 8,9</span>
         </li>
         <li>
           <a href="#">
-            <img src="img/Villas.jpg" width="135" height="90" alt="Вид на апартаменты Villas at Poco Diablo">
+            <img src="img\svillas.jpg" width="135" height="90" alt="Вид на апартаменты Villas at Poco Diablo">
           </a>
           <h3>
             <a href="#">Villas at Poco Diablo</a>
@@ -65,8 +65,8 @@
           <span>От 2000 р.</span>
           <a href="#">Подробнее</a>
           <a href="#">Забронировать</a>
-          <img src="StarsVillas.jpg">
-          <span>Рейтинг:9,2</span>
+          <img src="img\star.svg">
+          <span>Рейтинг: 9,2</span>
         </li>
       </ul>
     </section>
@@ -78,15 +78,15 @@
     </p>
     <div>
       <ul>
-        <li><a href="#">Twitter</a></li>
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">YouTube</a></li>
+        <li><a href="#">img\stwitter</a></li>
+        <li><a href="#">img\sfb-icon</a></li>
+        <li><a href="#">img\syouTube</a></li>
       </ul>
     </div>
     <p>
       Websait by
       <a href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="logo2.svg" width="" height="" alt="Логотип HTML Academy">
+        <img src="img\slogo-htmlacademy.svg" width="" height="" alt="Логотип HTML Academy">
       </a>
     </p>
   </footer>
