--- a/catalog.html
+++ b/catalog.html
@@ -56,7 +56,7 @@
         </li>
         <li>
           <a href="#">
-            <img src="img\svillas.jpg" width="135" height="90" alt="Вид на апартаменты Villas at Poco Diablo">
+            <img src="img\villas.jpg" width="135" height="90" alt="Вид на апартаменты Villas at Poco Diablo">
           </a>
           <h3>
             <a href="#">Villas at Poco Diablo</a>
@@ -78,15 +78,15 @@
     </p>
     <div>
       <ul>
-        <li><a href="#">img\stwitter</a></li>
-        <li><a href="#">img\sfb-icon</a></li>
-        <li><a href="#">img\syouTube</a></li>
+        <li><a href="#">img\twitter</a></li>
+        <li><a href="#">img\fb-icon</a></li>
+        <li><a href="#">img\youTube</a></li>
       </ul>
     </div>
     <p>
       Websait by
       <a href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="img\slogo-htmlacademy.svg" width="" height="" alt="Логотип HTML Academy">
+        <img src="img\logo-htmlacademy.svg" width="" height="" alt="Логотип HTML Academy">
       </a>
     </p>
   </footer>
