--- a/catalog.html
+++ b/catalog.html
@@ -56,7 +56,7 @@
         </li>
         <li>
           <a href="#">
-            <img src="img\villas.jpg" width="135" height="90" alt="Вид на апартаменты Villas at Poco Diablo">
+            <img src="img\desert.jpg" width="135" height="90" alt="Вид на апартаменты Villas at Poco Diablo">
           </a>
           <h3>
             <a href="#">Villas at Poco Diablo</a>
@@ -80,7 +80,7 @@
       <ul>
         <li><a href="#">img\twitter</a></li>
         <li><a href="#">img\fb-icon</a></li>
-        <li><a href="#">img\youTube</a></li>
+        <li><a href="#">img\youtube</a></li>
       </ul>
     </div>
     <p>
