--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </nav>
     <section>
       <h2>Логотип</h2>
-      <img src="logo-sedona.svg" width="138" height="70" alt="Логотип Седоны">
+      <img src="img\logo-sedona.svg" width="138" height="70" alt="Логотип Седоны">
     </section>
   </header>
   <main>
@@ -39,19 +39,19 @@
             </li>
             <ul>
               <li>
-                <img src="icon-1.svg" width="" height="" alt="Жилье">
+                <img src="img\icon-1.svg" width="" height="" alt="Жилье">
                 <h3>
                   <a href="#">Жилье</a>
                 </h3>
                 <li>
-                  <img src=" icon-2.svg " width="" height="" alt="Еда">
+                  <img src="img\icon-2.svg " width="" height="" alt="Еда">
                   <h3>
                     <a href="#">Еда</a>
                   </h3>
                   <p>Всегда заказывайте фирменный бургер,<br>вы не разочаруетесь!</p>
                 </li>
                 <li>
-                  <img src=" icon-3.svg " width="" height="" alt="Сувениры">
+                  <img src="img\icon-3.svg " width="" height="" alt="Сувениры">
                   <h3>
                     <a href="#">Сувениры</a>
                   </h3>
@@ -95,7 +95,7 @@
           <p>Укажите предполагаемые даты поездки,<br>и мы покажем лучшие предложения гостиниц в Седоне</p>
         </section>
         <section>
-          <img src="map.png" width="1200" height="593" alt="Карта">
+          <img src="img\map.png" width="1200" height="593" alt="Карта">
           <!-- Здесь будет форма -->
         </section>
       </main>
@@ -106,15 +106,15 @@
           </p>
           <div>
             <ul>
-              <li><a href="#">twitter</a></li>
-              <li><a href="#">fb-icon</a></li>
-              <li><a href="#">youTube</a></li>
+              <li><a href="#">img\twitter</a></li>
+              <li><a href="#">img\fb-icon</a></li>
+              <li><a href="#">img\youtube</a></li>
             </ul>
           </div>
           <p>
             Websait by
             <a href="https://htmlacademy.ru/intensive/htmlcss">
-              <img src="logo-htmlacademy.svg" width="" height="" alt="Логотип HTML Academy">
+              <img src="img\logo-htmlacademy.svg" width="" height="" alt="Логотип HTML Academy">
             </a>
           </p>
         </footer>
