--- a/catalog.html
+++ b/catalog.html
@@ -5,88 +5,107 @@
   <title>Седона</title>
 </head>
 <body>
-  <header>
-    <div></div>
-    <nav>
-      <a href="index.html">
-        <img src="img/index-logo.svg" width="138" height="70" alt="Логотип Седоны">
+  <header class="main-header">
+    <nav class="main-navigation">
+      <a class="main-header-logo" href="index.html">
+        <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип Седоны">
       </a>
-      <ul>
+      <ul class="site-navigation">
         <li><a href="info.html">Информация</a></li>
         <li><a href="photo.html">Фото и видео</a></li>
         <li><a href="map.html">Карта штата</a></li>
-        <li><a>Гостиницы</a></li>
+        <li class="hotel-current">Гостиницы</li>
       </ul>
     </nav>
   </header>
   <main>
-    <section>
+    <section class="filters">
+      <h2 class="visually-hidden">Фильтр отелей</h2>
       <!-- Здесь будет форма -->
     </section>
-    <section>
-      <h2>Список отелей</h2>
+    <div class="sorting">
       <ul>
         <li>
-          <a href="#">
-            <img src="img\amara.jpg" width="135" height="90" alt="Вид на гостиницу Amara Resort & spa">
+          <h3>Найдено: 3</h2>
+        </li>
+        <li class="sort">
+          <span>Сортировка:</span>
+        </li>
+        <li class="price-current">
+          <span>По цене</span>
+        </li>
+        <li class="type">
+          <span>По типу</span>
+        </li>
+        <li class="rating">
+          <span>По рейтингу</span>
+        </li>
+      </ul>
+    </div>
+    <section class="conteiner">
+      <h2 class="visually-hidden">Список отелей</h2>
+      <ul class="hotel-list">
+        <li class="hotel1">
+          <a href="">
+            <img src="img/amara.jpg" width="135" height="90" alt="Вид на гостиницу Amara Resort & spa">
           </a>
           <h3>
-            <a href="#">Amara Resort & spa</a>
+            <a href="">Amara Resort & spa</a>
           </h3>
-          <span>Гостиница</span>
-          <span>От 4000 р.</span>
-          <a href="#">Подробнее</a>
-          <a href="#">Забронировать</a>
-          <img src="img\star.svg">
+          <span class="type-house">Гостиница</span>
+          <span class="prise">От 4000 р.</span>
+          <a class="button" href="">Подробнее</a>
+          <a class="button-booking" href="">Забронировать</a>
+          <img src="img/star.svg">
           <span>Рейтинг: 8,5<span>
         </li>
-        <li>
-          <a href="#">
-            <img src="img\desert.jpg" width="135" height="90" alt="Вид на мотель Desert Quail Inn">
+        <li class="hotel2">
+          <a href="">
+            <img src="img/desert.jpg" width="135" height="90" alt="Вид на мотель Desert Quail Inn">
           </a>
           <h3>
-            <a href="#">Desert Quail Inn</a>
+            <a href="">Desert Quail Inn</a>
           </h3>
-          <span>Мотель</span>
+          <span class="type-house">Мотель</span>
           <span>От 3000 р.</span>
-          <a href="#">Подробнее</a>
-          <a href="#">Забронировать</a>
-          <img src="img\star.svg">
+          <a class="button" href="">Подробнее</a>
+          <a class="button-booking" href="">Забронировать</a>
+          <img src="img/star.svg">
           <span>Рейтинг: 8,9</span>
         </li>
-        <li>
-          <a href="#">
-            <img src="img\desert.jpg" width="135" height="90" alt="Вид на апартаменты Villas at Poco Diablo">
+        <li class="hotel3">
+          <a href="">
+            <img src="img/desert.jpg" width="135" height="90" alt="Вид на апартаменты Villas at Poco Diablo">
           </a>
           <h3>
-            <a href="#">Villas at Poco Diablo</a>
+            <a href="">Villas at Poco Diablo</a>
           </h3>
-          <span>Апартаменты</span>
+          <span class="type-house">Апартаменты</span>
           <span>От 2000 р.</span>
-          <a href="#">Подробнее</a>
-          <a href="#">Забронировать</a>
-          <img src="img\star.svg">
+          <a class="button" href="">Подробнее</a>
+          <a class="button-booking" href="">Забронировать</a>
+          <img src="img/star.svg">
           <span>Рейтинг: 9,2</span>
         </li>
       </ul>
     </section>
   </main>
-  <footer>
-    <p>#Visitsedona</p>
-    <p>Тел:
+  <footer class="main-footer">
+    <p class="visit">#Visitsedona</p>
+    <p class="tel">Тел:
       <a href="tel:+7(495)666-02-66">
     </p>
-    <div>
+    <div class="footer-social">
       <ul>
-        <li><a href="#">img\twitter</a></li>
-        <li><a href="#">img\fb-icon</a></li>
-        <li><a href="#">img\youtube</a></li>
+        <li><a class="social-button" href="">img/twitter</a></li>
+        <li><a class="social-button" href="">img/fb-icon</a></li>
+        <li><a class="social-button" href="">img/youtube</a></li>
       </ul>
     </div>
-    <p>
-      Websait by
+    <p class="footer-copyright">
+      <span>Websait by</span>
       <a href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="img\logo-htmlacademy.svg" width="" height="" alt="Логотип HTML Academy">
+        <img src="img/logo-htmlacademy.svg" width="" height="" alt="Логотип HTML Academy">
       </a>
     </p>
   </footer>
