редакция сортировочного блока

--- a/catalog.html
+++ b/catalog.html
@@ -23,8 +23,7 @@
       <h2 class="visually-hidden">Фильтр отелей</h2>
       <!-- Здесь будет форма -->
     </section>
-    <div class="sorting">
-      <ul>
+      <ul class="sorting">
         <li>
           <h3>Найдено: 3</h2>
         </li>
@@ -40,74 +39,77 @@
         <li class="rating">
           <span>По рейтингу</span>
         </li>
-      </ul>
-    </div>
-    <section class="conteiner">
-      <h2 class="visually-hidden">Список отелей</h2>
-      <ul class="hotel-list">
-        <li class="hotel1">
-          <a href="">
-            <img src="img/amara.jpg" width="135" height="90" alt="Вид на гостиницу Amara Resort & spa">
-          </a>
-          <h3>
-            <a href="">Amara Resort & spa</a>
-          </h3>
-          <span class="type-house">Гостиница</span>
-          <span class="prise">От 4000 р.</span>
-          <a class="button" href="">Подробнее</a>
-          <a class="button-booking" href="">Забронировать</a>
-          <img src="img/star.svg">
-          <span>Рейтинг: 8,5<span>
-        </li>
-        <li class="hotel2">
-          <a href="">
-            <img src="img/desert.jpg" width="135" height="90" alt="Вид на мотель Desert Quail Inn">
-          </a>
-          <h3>
-            <a href="">Desert Quail Inn</a>
-          </h3>
-          <span class="type-house">Мотель</span>
-          <span>От 3000 р.</span>
-          <a class="button" href="">Подробнее</a>
-          <a class="button-booking" href="">Забронировать</a>
-          <img src="img/star.svg">
-          <span>Рейтинг: 8,9</span>
-        </li>
-        <li class="hotel3">
-          <a href="">
-            <img src="img/desert.jpg" width="135" height="90" alt="Вид на апартаменты Villas at Poco Diablo">
-          </a>
-          <h3>
-            <a href="">Villas at Poco Diablo</a>
-          </h3>
-          <span class="type-house">Апартаменты</span>
-          <span>От 2000 р.</span>
-          <a class="button" href="">Подробнее</a>
-          <a class="button-booking" href="">Забронировать</a>
-          <img src="img/star.svg">
-          <span>Рейтинг: 9,2</span>
+        <li class="triangles">
+          <img src="img/icon-down-dir.svg">
+          <img src="img/icon-up-dir.svg">
         </li>
       </ul>
-    </section>
-  </main>
-  <footer class="main-footer">
-    <p class="visit">#Visitsedona</p>
-    <p class="tel">Тел:
-      <a href="tel:+7(495)666-02-66">
-    </p>
-    <div class="footer-social">
-      <ul>
-        <li><a class="social-button" href="">img/twitter</a></li>
-        <li><a class="social-button" href="">img/fb-icon</a></li>
-        <li><a class="social-button" href="">img/youtube</a></li>
-      </ul>
-    </div>
-    <p class="footer-copyright">
-      <span>Websait by</span>
-      <a href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="img/logo-htmlacademy.svg" width="" height="" alt="Логотип HTML Academy">
-      </a>
-    </p>
-  </footer>
+      <section class="conteiner">
+        <h2 class="visually-hidden">Список отелей</h2>
+        <ul class="hotel-list">
+          <li class="hotel1">
+            <a href="">
+              <img src="img/amara.jpg" width="135" height="90" alt="Вид на гостиницу Amara Resort & spa">
+            </a>
+            <h3>
+              <a href="">Amara Resort & spa</a>
+            </h3>
+            <span class="type-house">Гостиница</span>
+            <span class="prise">От 4000 р.</span>
+            <a class="button" href="">Подробнее</a>
+            <a class="button-booking" href="">Забронировать</a>
+            <img src="img/star.svg">
+            <span>Рейтинг: 8,5<span>
+          </li>
+          <li class="hotel2">
+            <a href="">
+              <img src="img/desert.jpg" width="135" height="90" alt="Вид на мотель Desert Quail Inn">
+            </a>
+            <h3>
+              <a href="">Desert Quail Inn</a>
+            </h3>
+            <span class="type-house">Мотель</span>
+            <span>От 3000 р.</span>
+            <a class="button" href="">Подробнее</a>
+            <a class="button-booking" href="">Забронировать</a>
+            <img src="img/star.svg">
+            <span>Рейтинг: 8,9</span>
+          </li>
+          <li class="hotel3">
+            <a href="">
+              <img src="img/desert.jpg" width="135" height="90" alt="Вид на апартаменты Villas at Poco Diablo">
+            </a>
+            <h3>
+              <a href="">Villas at Poco Diablo</a>
+            </h3>
+            <span class="type-house">Апартаменты</span>
+            <span>От 2000 р.</span>
+            <a class="button" href="">Подробнее</a>
+            <a class="button-booking" href="">Забронировать</a>
+            <img src="img/star.svg">
+            <span>Рейтинг: 9,2</span>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer class="main-footer">
+      <p class="visit">#Visitsedona</p>
+      <p class="tel">Тел:
+        <a href="tel:+7(495)666-02-66">
+      </p>
+      <div class="footer-social">
+        <ul>
+          <li><a class="social-button" href="">img/twitter</a></li>
+          <li><a class="social-button" href="">img/fb-icon</a></li>
+          <li><a class="social-button" href="">img/youtube</a></li>
+        </ul>
+      </div>
+      <p class="footer-copyright">
+        <span>Websait by</span>
+        <a href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="img/logo-htmlacademy.svg" width="" height="" alt="Логотип HTML Academy">
+        </a>
+      </p>
+    </footer>
 </body>
 </html>
