--- a/catalog.html
+++ b/catalog.html
@@ -36,7 +36,7 @@
           <span>По типу</span>
         </li>
         <li class="rating">
-          <span>По рейтингу</span>
+          <span class="top">По рейтингу</span>
         </li>
         <li class="triangles">
           <img src="img/icon-down-dir.svg">
@@ -59,7 +59,7 @@
         <a class="button" href="">Подробнее</a>
         <a class="button-booking" href="">Забронировать</a>
         <img src="img/star.svg">
-        <span>Рейтинг: 8,5<span>
+        <span class="top">Рейтинг: 8,5<span>
       </li>
       <li class="hotel2">
         <a href="">
@@ -69,11 +69,11 @@
           <a href="">Desert Quail Inn</a>
         </h3>
         <span class="type-house">Мотель</span>
-        <span>От 3000 р.</span>
+        <span class="prise">От 3000 р.</span>
         <a class="button" href="">Подробнее</a>
         <a class="button-booking" href="">Забронировать</a>
         <img src="img/star.svg">
-        <span>Рейтинг: 8,9</span>
+        <span class="top">Рейтинг: 8,9</span>
       </li>
       <li class="hotel3">
         <a href="">
@@ -83,11 +83,11 @@
           <a href="">Villas at Poco Diablo</a>
         </h3>
         <span class="type-house">Апартаменты</span>
-        <span>От 2000 р.</span>
+        <span class="prise">От 2000 р.</span>
         <a class="button" href="">Подробнее</a>
         <a class="button-booking" href="">Забронировать</a>
         <img src="img/star.svg">
-        <span>Рейтинг: 9,2</span>
+        <span class="top">Рейтинг: 9,2</span>
       </li>
       </ul>
     </section>
@@ -110,6 +110,6 @@
         <img src="img/logo-htmlacademy.svg" width="" height="" alt="Логотип HTML Academy">
       </a>
     </p>
-  </footer>
+   </footer>
 </body>
 </html>
