Измененила название класса

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <h3>
               <a href="">Настоящий городок</a>
             </h3>
-            <p>№1</p>
-            <p>Седона не аттракцион для туристов, <br>там течет настоящая жизнь</p>
+            <span>№1</span>
+            <span>Седона не аттракцион для туристов, <br>там течет настоящая жизнь</span>
             <img src="#.jpg" width="" height="" alt="Фото Седоны">
           </li>
           <div>
@@ -49,14 +49,14 @@
                   <h3>
                     <a href="">Еда</a>
                   </h3>
-                  <p>Всегда заказывайте фирменный бургер,<br>вы не разочаруетесь!</p>
+                  <span>Всегда заказывайте фирменный бургер,<br>вы не разочаруетесь!</span>
                 </li>
                 <li class="souvenirs">
                   <img src="img/icon-3.svg " width="" height="" alt="Сувениры">
                   <h3>
                     <a href="">Сувениры</a>
                   </h3>
-                  <p>Не только китайского, но и местного<br>производства</p>
+                  <span>Не только китайского, но и местного<br>производства</span>
                 </li>
               </ul>
             </div>
@@ -64,37 +64,37 @@
               <h3>
                   <a href="">Там есть мост дьявола</a>
                 </h3>
-                <p>№2</p>
-                <p>Да, по нему можно пройти! Если конечно<br>вы осмелитесь</p>
+                <span>№2</span>
+                <span>Да, по нему можно пройти! Если конечно<br>вы осмелитесь</span>
                 <img src="#.jpg" width="" height="" alt="Фото Моста Дьявола">
               </li>
               <li>
                 <h3>
                   <a href="">Небольшая площадь</a>
                 </h3>
-                <p>№3</p>
-                <p>Все достопримечательности<br>находятся очень близко</p>
+                <span>№3</span>
+                <span>Все достопримечательности<br>находятся очень близко</span>
               </li>
               <li>
                 <h3>
                   <a href=""> Красивая дорога</a>
                 </h3>
-                <p>№4<p>
-                <p>Ехать в Седону ихз Лас-Вегаса совсем<br>не скучно!</p>
+                <span>№4<span>
+                <span>Ехать в Седону ихз Лас-Вегаса совсем<br>не скучно!</span>
               </li>
               <li>
                 <h3>
                   <a href="">Мало туристов</a>
                 </h3>
-                <p>№5<p>
-                <p>Большинство едет в Гранд Коньон<br>и толпится там</p>
+                <span>№5</span>
+                <span>Большинство едет в Гранд Коньон<br>и толпится там</span>
               </li>
             </ol>
           </section>
         </article>
         <section>
           <h2>Заинтересовались?</h2>
-          <p>Укажите предполагаемые даты поездки,<br>и мы покажем лучшие предложения гостиниц в Седоне</p>
+          <span>Укажите предполагаемые даты поездки,<br>и мы покажем лучшие предложения гостиниц в Седоне</span>
         </section>
         <section>
           <img src="img/map.png" width="1200" height="593" alt="Карта">
