--- a/catalog.html
+++ b/catalog.html
@@ -59,7 +59,7 @@
         <a class="button" href="">Подробнее</a>
         <a class="button-booking" href="">Забронировать</a>
         <img src="img/star.svg">
-        <span class="top">Рейтинг: 8,5<span>
+        <span class="rating">Рейтинг: 8,5<span>
       </li>
       <li class="hotel2">
         <a href="">
@@ -73,7 +73,7 @@
         <a class="button" href="">Подробнее</a>
         <a class="button-booking" href="">Забронировать</a>
         <img src="img/star.svg">
-        <span class="top">Рейтинг: 8,9</span>
+        <span class="rating">Рейтинг: 8,9</span>
       </li>
       <li class="hotel3">
         <a href="">
@@ -87,7 +87,7 @@
         <a class="button" href="">Подробнее</a>
         <a class="button-booking" href="">Забронировать</a>
         <img src="img/star.svg">
-        <span class="top">Рейтинг: 9,2</span>
+        <span class="rating">Рейтинг: 9,2</span>
       </li>
       </ul>
     </section>
