Добавила новые классы в разметку

--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
         <li><a href="info.html">Информация</a></li>
         <li><a href="photo.html">Фото и видео</a></li>
         <li><a href="map.html">Карта штата</a></li>
-        <li class="hotel-current">Гостиницы</li>
+        <li><a class="hotel-current">Гостиницы</a></li>
       </ul>
     </nav>
   </header>
